update files as per 'TAF_final' repo

--- a/dbms/templates/dbms/index.html
+++ b/dbms/templates/dbms/index.html
@@ -251,13 +251,10 @@
 								<p>Save the trees
 									<i class="fa fa-tree" aria-hidden="true"></i> they will save you</p>
 								<div class="video-pop-wthree">
-									<a href="#small-dialog1" class="view play-icon popup-with-zoom-anim ">
-										<i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video to
-										know techfarm</a>
-									<div id="small-dialog1" class="mfp-hide w3ls_small_dialog wthree_pop">
-										<iframe src="https://player.vimeo.com/video/19251347"></iframe>
+								 	<a  style="font-size:20px; color: white;" target="_blank" href="https://youtu.be/6wqwMOR8yZY" class="">
+									<i class="fa fa-play-circle" aria-hidden="true" height=1000px;></i>	&nbsp;&nbsp;Watch Our Video</a>
 									</div>
-								</div>
+								
 								<div class="thim-click-to-bottom">
 									<a href="#about" class="scroll">
 										<i class="fa  fa-chevron-down"></i>
@@ -276,13 +273,9 @@
 								<p>Save the trees
 									<i class="fa fa-tree" aria-hidden="true"></i> they will save you</p>
 								<div class="video-pop-wthree">
-									<a href="#small-dialog2" class="view play-icon popup-with-zoom-anim ">
-										<i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video to know
-										techfarm</a>
-									<div id="small-dialog2" class="mfp-hide w3ls_small_dialog wthree_pop">
-										<iframe src="https://player.vimeo.com/video/19251347"></iframe>
+								 	<a  style="font-size:20px; color: white;" target="_blank" href="https://youtu.be/6wqwMOR8yZY" class="">
+									<i class="fa fa-play-circle" aria-hidden="true" height=1000px;></i>	&nbsp;&nbsp;Watch Our Video</a>
 									</div>
-								</div>
 								<div class="thim-click-to-bottom">
 									<a href="#about" class="scroll">
 										<i class="fa  fa-chevron-down"></i>
@@ -300,13 +293,9 @@
 								<p>Save the trees
 									<i class="fa fa-tree" aria-hidden="true"></i> they will save you</p>
 								<div class="video-pop-wthree">
-									<a href="#small-dialog3" class="view play-icon popup-with-zoom-anim ">
-										<i class="fa fa-play-circle" aria-hidden="true"></i>Watch Our Video to know
-										techfarm</a>
-									<div id="small-dialog3" class="mfp-hide w3ls_small_dialog wthree_pop">
-										<iframe src="https://player.vimeo.com/video/19251347"></iframe>
+								 	<a  style="font-size:20px; color: white;" target="_blank" href="https://youtu.be/6wqwMOR8yZY" class="">
+									<i class="fa fa-play-circle" aria-hidden="true" height=1000px;></i>	&nbsp;&nbsp;Watch Our Video</a>
 									</div>
-								</div>
 								<div class="thim-click-to-bottom">
 									<a href="#about" class="scroll">
 										<i class="fa  fa-chevron-down"></i>
@@ -461,7 +450,7 @@
 						<h4>IIT Kanpur</h4>
 					</div>
 					<div class="clearfix"></div>
-					<p>"ndian Institute of Technology Kanpur (also known as IIT Kanpur or IITK) is a public engineering institution located in Kanpur, Uttar Pradesh. It was declared to be an Institute of National Importance by the Government of India under the Institutes of Technology Act."</p>
+					<p>"Indian Institute of Technology Kanpur (also known as IIT Kanpur or IITK) is a public engineering institution located in Kanpur, Uttar Pradesh. It was declared to be an Institute of National Importance by the Government of India under the Institutes of Technology Act."</p>
 					<br><br><br><a href="https://www.iitk.ac.in/"class="w3-buttons">IIT Kanpur`</a>
 				</div>
 				<div class="clearfix"> </div>
@@ -939,7 +928,8 @@
 			<div class="clearfix"></div>
 			<div class="copy-right">
 				<p> &copy; 2019 TechAtFarm. All Rights Reserved |
-					<a href="http://iitk.ac.in"> Designed by SoC PANDAVAS</a>
+					<a href="#"> Designed by SoC PANDAVAS</a>
+					
 				</p>
 			</div>
 		</div>
